Fixed bugs #3 and #4. Removed tablesorter plugin (too old).

--- a/views/edit-held/rituale.jade
+++ b/views/edit-held/rituale.jade
@@ -35,7 +35,7 @@ html(lang="de")
 		link(rel="stylesheet", type="text/css", href="/nav.css")
 		link(rel="stylesheet", type="text/css", href="/tablesorter/tablesorter.css")
 		script(src="/jquery-2.0.3.min.js")
-		script(src="/tablesorter/jquery.tablesorter.min.js")
+		//script(src="/tablesorter/jquery.tablesorter.min.js")
 		style.
 			label[for] {
 				cursor: pointer;
