--- a/views/edit-held/zauber.jade
+++ b/views/edit-held/zauber.jade
@@ -11,7 +11,7 @@ html(lang="de")
 		link(rel="stylesheet", type="text/css", href="/dropout.css")
 		link(rel="stylesheet", type="text/css", href="/tablesorter/tablesorter.css")
 		script(src="/jquery-2.0.3.min.js")
-		script(src="/tablesorter/jquery.tablesorter.min.js")
+		//script(src="/tablesorter/jquery.tablesorter.min.js")
 		style.
 			#spell_choice tbody td:first-child {
 				padding-left: 0;
