Reimplementing Social Login (Google+ only atm)

--- a/views/signup.jade
+++ b/views/signup.jade
@@ -2,8 +2,8 @@ doctype html
 html(lang="de")
 	head
 		meta(charset="utf-8")
-		title DCM Database Manager
-		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css")
+		title DCM Registrierung
+		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/spacelab/bootstrap.min.css")
 		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
 		style.
 			body {
