--- a/views/splash.jade
+++ b/views/splash.jade
@@ -26,4 +26,12 @@ html(lang="de")
 				a(href="/signup").btn.btn-default
 					span.fa.fa-user &nbsp;
 					| Registrieren
+				| &nbsp;
+				a(href="/auth/google").btn.btn-danger
+					span.fa.fa-google-plus-square &nbsp;
+					| Google+
+				| &nbsp;
+				a.btn.btn-info(title="kommt noch")
+					span.fa.fa-facebook-square &nbsp;
+					| facebook
 				
