--- a/views/users/profil.jade
+++ b/views/users/profil.jade
@@ -69,7 +69,7 @@ html(lang="de")
 						.panel-heading
 							h4.text-danger
 								span.fa.fa-google-plus-square &nbsp;
-								strong Google+
+								strong Google
 						.panel-body
 							if (_User.google.token)
 								p
