--- a/views/users/friends.jade
+++ b/views/users/friends.jade
@@ -7,7 +7,7 @@ html(lang="de")
 		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/spacelab/bootstrap.min.css")
 		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
 		script(src="//code.jquery.com/jquery.min.js")
-		//script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
+		script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
 		script(src="/typeahead.bundle.min.js")
 		style.
 			.tt-dropdown-menu {
