Preparing code for facebook login.

--- a/views/about.jade
+++ b/views/about.jade
@@ -72,4 +72,4 @@ html(lang="de")
 							li Dein lokales Konto ist mit einem Sozialnetzwerkkonto (z.B. facebook) verlinkt: Trenne das lokale Konto ab und verbinde es wieder neu. Falls du das Sozialnetzwerkkonto getrennt haben solltest und dich abgemeldet hast, siehe 1. (solange du angemeldet bist, kannst du das Trennen/Verbinden beliebig wiederholen). 
 					dt Ich habe zwei Konten verlinkt, aber ich sehe immer nur die Helden von einem Account.
 					dd
-						p Dann hast du sehr wahrscheinlich dich vorher mit beiden Konten angemeldet, also zwei Benutzerkonten angelegt. Die Verlinkung betrift aber nur die Anmeldedaten eines einzigen Nutzerkontos. Da kann nur noch der Admin was machen.
+						p Dann hast du sehr wahrscheinlich dich vorher mit beiden Konten angemeldet, also zwei Benutzerkonten angelegt. Die Verlinkung betrifft aber nur die Anmeldedaten eines einzigen Nutzerkontos. Da kann nur noch der Admin was machen.
