Getting Facebook login to work and moved credentials to ENV.

--- a/views/splash.jade
+++ b/views/splash.jade
@@ -29,7 +29,7 @@ html(lang="de")
 					span.fa.fa-google-plus-square &nbsp;
 					| Google
 				| &nbsp;
-				a.btn.btn-info(title="kommt noch")
+				a(href="/auth/facebook").btn.btn-info
 					span.fa.fa-facebook-square &nbsp;
 					| facebook
 				
