--- a/views/users/profil.jade
+++ b/views/users/profil.jade
@@ -81,7 +81,7 @@ html(lang="de")
 								a(href="/unlink/google").btn.btn-sm.btn-danger Trennen
 							else
 								a(href="/connect/google").btn.btn-sm.btn-danger Google hinzufügen
-			//-.row
+			.row
 				.col-sm-6
 					.panel.panel-default
 						.panel-heading
@@ -99,7 +99,7 @@ html(lang="de")
 								a(href="/unlink/facebook").btn.btn-sm.btn-primary Trennen
 							else
 								a(href="/connect/facebook").btn.btn-sm.btn-primary Facebook hinzufügen
-				.col-sm-6
+				//-.col-sm-6
 					.panel.panel-default
 						.panel-heading
 							h4.text-warning 
