--- a/views/about.jade
+++ b/views/about.jade
@@ -78,6 +78,10 @@ html(lang="de")
 						ol.dcm-list(type="1")
 							li einen (oder entsprechend viele) beliebigen Vor- oder Nachteil hinzufügen (Editor)
 							li speichern
-							li Editor wider öffnen
+							li Editor erneut öffnen
 							li im Textfeld den (oder die) hinzugefügten Vorteil/Nachteil durch deinen eigenen ersetzen
 							li speichern
+					dt Die Sortierung der Talente/Zauber/… stimmt nicht ganz.
+					dd 
+						p Das liegt daran, daß der Server keine Sprachen unterstützt (Stichwort: Locale) und daher entsprechend der Unicode-Tabellen die Buchstaben sortiert.
+						p Aus diesem Grung werden auch die Zauber nicht sortiert, da sonst „Ängste lindern“ hinter „Zauberzwang“ auftaucht.
