--- a/views/held/held.jade
+++ b/views/held/held.jade
@@ -482,7 +482,7 @@ html(lang="de")
 					thead
 						tr
 							th Waffe
-							th Talent
+							th eBE
 							th FKW
 							th TP
 							th DK
